Added babel to build es2015 code in dist

--- a/example/test.html
+++ b/example/test.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <script async src="../width-modifier.js"></script>
+  <script async src="../dist/width-modifier.js"></script>
   <link rel="stylesheet" type="text/css" href="test.css">
   <style>
     :root {
